--- a/c7d20851f4d09430170f4610ffdd694d.html
+++ b/c7d20851f4d09430170f4610ffdd694d.html
@@ -4,6 +4,10 @@
 	
 
 	<title>la feminidad</title>
+	<meta property="og:title" content="No te lo vas a creer, pero tengo 38 años">
+<meta property="og:description" content="🏅El secreto de un rostro joven está en este artículo..👉">
+<meta property="og:image" content="assets/image/anna-pelzer-igfigp5onv0-unsplash.jpg">
+	
 	<meta charset="UTF-8">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
